Fix Arch CI package list for base-devel container

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -54,7 +54,7 @@ jobs:
           pacman -Syu --noconfirm
           pacman -S --noconfirm --needed \
             git wget unzip tar pkgconf \
-            freetype2 lib32-freetype2 gnu-free-fonts \
+            freetype2 gnu-free-fonts \
             glib2 gstreamer \
             libxslt libxml2 \
             libpng \
