--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,94 +1,35 @@
-name: Build Wine ARM64EC (WCP)
+name: ci-arm64ec-wine
 
 on:
-  push:
-    branches: ["main"]
-  pull_request:
   workflow_dispatch:
-    inputs:
-      wcp_name:
-        description: "WCP artifact name (without .wcp)"
-        required: false
-        default: "wine-11.1-staging-s8g1"
-      llvm_mingw_ver:
-        description: "llvm-mingw version tag"
-        required: false
-        default: "20251216"
-
-concurrency:
-  group: wcp-${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
-permissions:
-  contents: read
-
-env:
-  WCP_NAME: ${{ github.event.inputs.wcp_name || 'wine-11.1-staging-s8g1' }}
-  LLVM_MINGW_VER: ${{ github.event.inputs.llvm_mingw_ver || '20251216' }}
-  WCP_OUTPUT_DIR: ${{ github.workspace }}/dist
-  TOOLCHAIN_DIR: ${{ github.workspace }}/.cache/llvm-mingw
+  push:
+    branches: [ main ]
+  pull_request:
 
 jobs:
   build:
-    name: Build WCP (ARM64EC)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 360
-
-    container:
-      image: archlinux:base-devel
-
-    defaults:
-      run:
-        shell: bash
 
     steps:
       - name: Checkout
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
+        uses: actions/checkout@v4
+
+      - name: Cache toolchains
+        uses: actions/cache@v4
         with:
-          fetch-depth: 1
-          persist-credentials: false
+          path: |
+            .cache
+            wine-src
+          key: ${{ runner.os }}-wine11.1-${{ hashFiles('build.sh', 'scripts/ci-build.sh') }}
 
-      - name: Bootstrap packages (Arch)
-        run: |
-          set -euxo pipefail
-          pacman -Syu --noconfirm
-          pacman -S --noconfirm --needed \
-            git wget unzip tar pkgconf \
-            freetype2 gnu-free-fonts \
-            glib2 gstreamer \
-            libxslt libxml2 \
-            libpng \
-            lcms2 \
-            libunwind \
-            gst-plugins-base-libs \
-            giflib \
-            gnutls \
-            samba \
-            sdl2
-          mkdir -p "${WCP_OUTPUT_DIR}" "${TOOLCHAIN_DIR}"
-
-      - name: Cache llvm-mingw toolchain
-        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
-        with:
-          path: ${{ env.TOOLCHAIN_DIR }}
-          key: llvm-mingw-${{ env.LLVM_MINGW_VER }}
-
-      - name: Build
-        run: |
-          set -euxo pipefail
-          chmod +x build.sh
-          ./build.sh
-
-      - name: Verify artifact exists
-        run: |
-          set -euxo pipefail
-          ls -lah "${WCP_OUTPUT_DIR}"
-          test -f "${WCP_OUTPUT_DIR}/${WCP_NAME}.wcp"
+      - name: Build WCP
+        run: ./scripts/ci-build.sh
 
       - name: Upload WCP artifact
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.WCP_NAME }}
-          path: ${{ env.WCP_OUTPUT_DIR }}/${{ env.WCP_NAME }}.wcp
+          name: wine-11.1-arm64ec-wcp
+          path: dist/*.wcp
           if-no-files-found: error
           retention-days: 14
