Fix FEX DLL configure failure by disabling tests and adding nasm

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -52,7 +52,7 @@ jobs:
           sudo apt-get install -y --no-install-recommends \
             bash curl git python3 wget unzip tar pkg-config \
             cmake ninja-build rsync \
-            zstd file binutils \
+            zstd file binutils nasm \
             build-essential \
             libfreetype-dev fonts-dejavu-core \
             libglib2.0-dev gstreamer1.0-tools \
