proton10: align bionic runtime profile and release packaging

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -112,5 +112,5 @@ jobs:
           prerelease: true
           artifacts: ${{ env.WCP_OUTPUT_DIR }}/${{ env.WCP_NAME }}.wcp
           artifactErrorsFailBuild: true
-          removeArtifacts: true
+          removeArtifacts: false
           bodyFile: RELEASE_NOTES.md
