wine: enforce SDL2 in ARM64EC build and CI

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -27,6 +27,7 @@ env:
   LLVM_MINGW_VER: ${{ github.event.inputs.llvm_mingw_ver || '20260210' }}
   WCP_OUTPUT_DIR: ${{ github.workspace }}/dist
   TOOLCHAIN_DIR: ${{ github.workspace }}/.cache/llvm-mingw
+  WCP_ENABLE_SDL2_RUNTIME: "1"
 
 jobs:
   build:
